Add new button that receives user input and changes form size accordingly

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Etch-A-Sketch</h1>
+    <button id="resetButton">button</button>
     <div id="overallContainer"></div>
   </body>
   <script src="script.js"></script>
