Add black and rainbow color buttons to change style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <h1>Etch-A-Sketch</h1>
-    <button id="resetButton">button</button>
+    <button id="resetButton">reset</button>
+    <button id="rainbowButton">rainbow</button>
+    <button id="blackButton">black</button>
     <div id="overallContainer"></div>
   </body>
   <script src="script.js"></script>
