Stylize the page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
   <head>
     <link href="index.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR" rel="stylesheet">
     <title>Etch-A-Sketch</title>
   </head>
   <body>
     <h1>Etch-A-Sketch</h1>
-    <button id="resetButton">reset</button>
-    <button id="rainbowButton">rainbow</button>
-    <button id="blackButton">black</button>
+    <div id="buttonHolder">
+      <button id="resetButton">Reset</button>
+      <button id="rainbowButton">Rainbow</button>
+      <button id="blackButton">Black</button>
+    </div>
     <div id="overallContainer"></div>
   </body>
   <script src="script.js"></script>
